--- a/tests/worker/base-scenarios/base-tmt_checks.yaml
+++ b/tests/worker/base-scenarios/base-tmt_checks.yaml
@@ -11,6 +11,7 @@ variable:
   GIT_REF: change-me
   PLAN: change-me
   SCHEDULE_ENTRIES: 1
+  TMT_EXIT_CODE: 0
 
 checks:
   literal-strings:
@@ -19,7 +20,7 @@ checks:
     - "[coldstore] For the pipeline artifacts, see https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}"
     - "[testing-farm-request-state-reporter] pipeline complete"
     - "[test-schedule-tmt-connect] cloning repo {{ GIT_CLONE_URL }} (branch not specified, ref {{ GIT_REF }})"
-    - "[test-schedule-tmt-connect] tmt exited with code 0"
+    - "[test-schedule-tmt-connect] tmt exited with code {{ TMT_EXIT_CODE }}"
     - "[test-schedule-tmt-connect] cloning repo"
     - "[test-schedule-runner] running test schedule of {{ SCHEDULE_ENTRIES }} entries"
     - "[test-schedule-report] Result of testing: {{ RESULT }}"
