--- a/terragrunt/environments/production/artemis/config/variables_images.yaml
+++ b/terragrunt/environments/production/artemis/config/variables_images.yaml
@@ -21,17 +21,17 @@ composes:
     compose: Fedora-39
 
     x86_64:
-      image: Fedora-Cloud-Base-39-20240622.0.x86_64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-39-20240704.0.x86_64-hvm-us-east-2-gp3-0
     aarch64:
-      image: Fedora-Cloud-Base-39-20240623.0.aarch64-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-39-20240704.0.aarch64-hvm-us-east-2-gp3-0
 
   fedora_40:
     compose: Fedora-40
 
     x86_64: &fedora_latest_ref_x86_64
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-40-20240623.0-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-40-20240704.0-hvm-us-east-2-gp3-0
     aarch64: &fedora_latest_ref_aarch64
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-40-20240623.0-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-40-20240704.0-hvm-us-east-2-gp3-0
 
   # TFT-1221
   fedora_latest:
@@ -44,17 +44,17 @@ composes:
     compose: Fedora-Rawhide
 
     x86_64:
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-Rawhide-20240622.n.0-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-Rawhide-20240705.n.0-hvm-us-east-2-gp3-0
     aarch64:
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-Rawhide-20240622.n.0-hvm-us-east-2-gp3-0
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-Rawhide-20240705.n.0-hvm-us-east-2-gp3-0
 
   centos_7:
     compose: CentOS-7
 
     x86_64:
-      image: CentOS 7.9.2009 x86_64
+      image: CentOS Linux 7 x86_64 - 2211
     aarch64:
-      image: CentOS 7.9.2009 aarch64
+      image: CentOS Linux 7 aarch64 - 2211
 
   centos_stream_8:
     compose: CentOS-Stream-8
@@ -68,9 +68,9 @@ composes:
     compose: CentOS-Stream-9
 
     x86_64:
-      image: CentOS Stream 9 x86_64 20240617
+      image: CentOS Stream 9 x86_64 20240703
     aarch64:
-      image: CentOS Stream 9 aarch64 20240617
+      image: CentOS Stream 9 aarch64 20240624
 
   centos_stream_10:
     compose: CentOS-Stream-10
