--- a/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
+++ b/tests/worker/public/tmt-multihost-x86_64-aarch64.yaml
@@ -39,6 +39,9 @@ checks:
          <property name="baseosci.result" value="passed"/>
         </properties>
         <testcase name="/server-setup/testing-farm/tests/multihost/A" result="passed" serial-number="1">
+         <properties>
+          <property name="contact" value="Testing Farm Contact &lt;tft@redhat.com&gt;"/>
+         </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/server-setup/testing-farm/tests/multihost/A-1/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/server-setup/testing-farm/tests/multihost/A-1" name="log_dir" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -53,6 +56,10 @@ checks:
          </guest>
         </testcase>
         <testcase name="/tests/testing-farm/tests/multihost/B" result="passed" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}" serial-number="2">
+         <properties>
+          <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
+          <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+         </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/B-2/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/B-2" name="log_dir" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -67,6 +74,10 @@ checks:
          </guest>
         </testcase>
         <testcase name="/tests/testing-farm/tests/multihost/B" result="passed" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}" serial-number="2">
+         <properties>
+          <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
+          <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+         </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/B-2/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/B-2" name="log_dir" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -81,6 +92,10 @@ checks:
          </guest>
         </testcase>
         <testcase name="/tests/testing-farm/tests/multihost/C" result="passed" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}" serial-number="3">
+         <properties>
+          <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
+          <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+         </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/C-3/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/C-3" name="log_dir" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
@@ -95,6 +110,10 @@ checks:
          </guest>
         </testcase>
         <testcase name="/tests/testing-farm/tests/multihost/C" result="passed" time="{{ '\d+' }}" start-time="{{ timestamp_pattern }}" end-time="{{ timestamp_pattern }}" serial-number="3">
+         <properties>
+          <property name="contact" value="Testing Farm Contact1 &lt;tft@redhat.com&gt;"/>
+          <property name="contact" value="Testing Farm Contact2 &lt;tft@redhat.com&gt;"/>
+         </properties>
          <logs>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/C-3/data" name="data" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
           <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-basic{{ '.+' }}{{ PLAN }}/execute/data/guest/{{ 'server|client' }}/tests/testing-farm/tests/multihost/C-3" name="log_dir" schedule-entry="{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
