--- a/terragrunt/environments/staging/artemis/config/variables_images.yaml
+++ b/terragrunt/environments/staging/artemis/config/variables_images.yaml
@@ -19,15 +19,29 @@ composes:
     compose: Fedora-42
 
     x86_64: &fedora_latest_ref_x86_64
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-42-Prerelease-20250208.2
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-42-20250820.0
     aarch64: &fedora_latest_ref_aarch64
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-42-Prerelease-20250208.2
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-42-20250820.0
 
   fedora_42_image_mode:
     compose: Fedora-42-image-mode
 
     x86_64: &fedora_latest_image_mode_ref_x86_64
       image: Fedora-42-image-mode-x86_64
+
+  fedora_43:
+    compose: Fedora-43
+
+    x86_64:
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-43-Prerelease-20250820.0
+    aarch64:
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-43-Prerelease-20250820.0
+
+  fedora_43_image_mode:
+    compose: Fedora-43-image-mode
+
+    x86_64:
+      image: Fedora-43-image-mode-x86_64
 
   # TFT-1221
   fedora_latest:
