--- a/ansible/playbooks/create-public-worker.yaml
+++ b/ansible/playbooks/create-public-worker.yaml
@@ -108,6 +108,7 @@
     - import_tasks: ../tasks/config.yaml
     - import_tasks: ../tasks/image.yaml
     - import_tasks: ../tasks/terragrunt.yaml
+    - import_tasks: ../tasks/profiles.yaml
   roles:
     - name: geerlingguy.swap
       vars:
